force-app/main/default/objects/Instructions__c/Instructions__c.object-meta.xml
<CustomObject>
    <label>Instructions</label>
    <nameField>
        <label>Instructions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>