force-app/main/default/objects/Instructions__c/fields/LongText1__c.field-meta.xml
<CustomField>
    <fullName>LongText1__c</fullName>
    <label>LongText1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>