force-app/main/default/objects/Instructions__c/fields/LongText2__c.field-meta.xml
<CustomField>
    <fullName>LongText2__c</fullName>
    <label>LongText2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>