force-app/main/default/objects/Instructions__c/fields/LongText3__c.field-meta.xml
<CustomField>
    <fullName>LongText3__c</fullName>
    <label>LongText3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>